infra/kubernetes/base/kafka-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: renlo-kafka
  namespace: renlo
spec:
  serviceName: renlo-kafka
  replicas: 1
  selector:
    matchLabels:
      app: renlo-kafka
  template:
    metadata:
      labels:
        app: renlo-kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.1
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: data
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 10Gi
