infra/kubernetes/base/zookeeper-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: renlo-zookeeper
  namespace: renlo
spec:
  serviceName: renlo-zookeeper
  replicas: 1
  selector:
    matchLabels:
      app: renlo-zookeeper
  template:
    metadata:
      labels:
        app: renlo-zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.6.1
          ports:
            - containerPort: 2181
          volumeMounts:
            - name: data
              mountPath: /var/lib/zookeeper/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 5Gi
