infra/kubernetes/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renlo-kafka
  namespace: renlo
spec:
  selector:
    app: renlo-kafka
  ports:
    - port: 9092
      targetPort: 9092
