infra/kubernetes/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renlo-postgres
  namespace: renlo
spec:
  selector:
    app: renlo-postgres
  ports:
    - port: 5432
      targetPort: 5432
