infra/kubernetes/base/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renlo-zookeeper
  namespace: renlo
spec:
  selector:
    app: renlo-zookeeper
  ports:
    - port: 2181
      targetPort: 2181
