infra/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: renlo-ingress
  namespace: renlo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  ingressClassName: nginx
  rules:
    - host: renlo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: renlo-backend
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: renlo-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: renlo-frontend
                port:
                  number: 80
